[gd_scene load_steps=41 format=2]

[ext_resource path="res://enemies/Dungeon/MeleeSkeleton/skelesM.gd" type="Script" id=1]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0002.png" type="Texture" id=2]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0000.png" type="Texture" id=3]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0004.png" type="Texture" id=4]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0006.png" type="Texture" id=5]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0007.png" type="Texture" id=6]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0009.png" type="Texture" id=7]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0010.png" type="Texture" id=8]
[ext_resource path="res://enemies/Dungeon/MeleeSkeleton/MeleeSkeletonIdle.png" type="Texture" id=9]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0008.png" type="Texture" id=10]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0001.png" type="Texture" id=11]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0003.png" type="Texture" id=12]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0005.png" type="Texture" id=13]
[ext_resource path="res://enemies/Dungeon/MeleeSkeleton/MeleeSkeletonWalk.png" type="Texture" id=14]
[ext_resource path="res://enemies/Dungeon/MeleeSkeleton/MeleeSkeletonAttack.png" type="Texture" id=15]
[ext_resource path="res://sounds/player/hit.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 96.0
height = 704.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 53.1997
height = 92.9756

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 64 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 49.8552
height = 25.2269

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 37.3012, 62.2874 )

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "swing"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=16]
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 423, 83 )
states/swing/node = SubResource( 9 )
states/swing/position = Vector2( 563, -61 )
states/walking/node = SubResource( 10 )
states/walking/position = Vector2( 591, 83 )
transitions = [ "idle", "walking", SubResource( 11 ), "walking", "idle", SubResource( 12 ), "idle", "swing", SubResource( 13 ), "walking", "swing", SubResource( 14 ), "swing", "idle", SubResource( 15 ) ]
start_node = "idle"
graph_offset = Vector2( 58, -87 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="Animation" id=18]
length = 0.916666
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.583333, 0.75, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 6, 7, 9, 10 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("smack_box:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
length = 0.916666
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("smack_box:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.416667, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("smack_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.416667, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:canmove")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.916667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.583333, 0.75, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 7, 9, 10 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -22.9154 ) ]
}

[sub_resource type="Animation" id=20]
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.333333, 0.5, 0.666666, 0.833333, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 4, 6, 8, 10, 11 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("smack_box:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 41.886, 41.5376 )

[sub_resource type="CanvasItemMaterial" id=22]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[node name="melee_skeleton" type="KinematicBody2D" groups=[
"baddies",
]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
hframes = 4
vframes = 3
frame = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
frames = SubResource( 1 )
frame = 6

[node name="line_of_sight" type="Area2D" parent="."]
visible = false

[node name="circle" type="CollisionShape2D" parent="line_of_sight"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="damage_radius" type="Area2D" parent="."]
visible = false
monitoring = false
collision_layer = 32
collision_mask = 48

[node name="circle" type="CollisionShape2D" parent="damage_radius"]
shape = SubResource( 3 )

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 4 )

[node name="smack_box" type="Area2D" parent="."]
visible = false
monitoring = false
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="smack_box"]
position = Vector2( 52.1776, -14.3205 )
shape = SubResource( 5 )

[node name="target_zone" type="Area2D" parent="."]
position = Vector2( 0, 40.97 )
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_zone"]
position = Vector2( 57.6547, -37.4803 )
shape = SubResource( 6 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/took_damage = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 18 )
anims/swing = SubResource( 19 )
anims/walking = SubResource( 20 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -20, 24 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 20, 24 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="topleft" type="RayCast2D" parent="."]
position = Vector2( -20, -30 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="topright" type="RayCast2D" parent="."]
position = Vector2( 21, -30 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.500565 )
shape = SubResource( 21 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 24 )
enabled = true

[node name="hud" type="Control" parent="."]
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="hud"]
material = SubResource( 22 )
anchor_left = 0.5
anchor_top = 0.417
anchor_right = 0.5
anchor_bottom = 0.417
margin_left = -40.0
margin_top = -24.064
margin_right = 40.0
margin_bottom = -10.064
custom_styles/fg = SubResource( 23 )
custom_styles/bg = SubResource( 24 )
max_value = 60.0
value = 60.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 16 )

[connection signal="body_entered" from="line_of_sight" to="." method="_on_line_of_sight_body_entered"]
[connection signal="body_exited" from="line_of_sight" to="." method="_on_line_of_sight_body_exited"]
[connection signal="body_entered" from="damage_radius" to="." method="_on_damage_radius_body_entered"]
[connection signal="body_entered" from="smack_box" to="." method="_on_smack_box_body_entered"]
[connection signal="body_entered" from="target_zone" to="." method="_on_target_zone_body_entered"]
